--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "lodash": "^4.16.2",
     "moment": "^2.15.1",
     "morgan": "^1.7.0",
-    "rethinkdb": "^2.3.3"
+    "rethinkdb": "^2.3.3",
+    "updeep": "^0.16.1"
   },
   "devDependencies": {
     "babel-cli": "^6.16.0",
