--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "cors": "^2.8.1",
     "dotenv": "^2.0.0",
     "express": "^4.14.0",
+    "express-jwt": "^5.1.0",
     "helmet": "^2.3.0",
     "lodash": "^4.16.2",
     "moment": "^2.15.1",
