--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "dotenv": "^2.0.0",
     "express": "^4.14.0",
     "express-jwt": "^5.1.0",
+    "express-unless": "^0.3.0",
     "helmet": "^2.3.0",
     "lodash": "^4.16.2",
     "moment": "^2.15.1",
