--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "env NODE_ENV=development nodemon --exec 'babel-node src/index.js'"
+    "dev": "env NODE_ENV=development nodemon --exec 'babel-node src/index.js'",
+    "lint": "eslint src"
   },
   "repository": {
     "type": "git",
@@ -27,6 +28,7 @@
     "express-jwt": "^5.1.0",
     "express-unless": "^0.3.0",
     "helmet": "^2.3.0",
+    "jsonwebtoken": "^7.1.9",
     "lodash": "^4.16.2",
     "moment": "^2.15.1",
     "morgan": "^1.7.0",
@@ -38,7 +40,7 @@
     "babel-eslint": "^7.0.0",
     "babel-preset-es2015": "^6.16.0",
     "babel-preset-stage-2": "^6.17.0",
-    "eslint": "^3.7.0",
+    "eslint": "^3.7.1",
     "eslint-config-standard": "^6.2.0",
     "eslint-plugin-promise": "^2.0.1",
     "eslint-plugin-standard": "^2.0.1",
